[package]
name = "ecdh-backend"
version = "0.1.0"
authors = ["Julian Popescu <jpopesculian@gmail.com>"]
edition = "2018"
default-run = "server"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
hyper = "0.13"
log = "0.4"
simple_logger = "1.4"
anyhow = "1.0"
base64 = "0.11"
ring = { version = "0.16", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "0.5"
redis = "0.15"
config = "0.10"
