# syntax = denzp/cargo-wharf-frontend:v0.1.0-alpha.2

[package]
name = "ecdh-backend"
version = "0.1.0"
authors = ["Julian Popescu <jpopesculian@gmail.com>"]
edition = "2018"
default-run = "server"

[package.metadata.wharf.builder]
image = "clux/muslrust:nightly"
target = "x86_64-unknown-linux-musl"

[package.metadata.wharf.output]
image = "scratch"
workdir = "/"

[[package.metadata.wharf.binary]]
name = "server"
destination = "/bin/server"

[[package.metadata.wharf.binary]]
name = "genkey"
destination = "/bin/genkey"

[dependencies]
tokio = { version = "1.13", features = ["full"] }
hyper = "0.13"
log = "0.4"
simple_logger = "1.4"
anyhow = "1.0"
base64 = "0.11"
ring = { version = "0.16", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "0.5"
redis = "0.15"
config = "0.10"
